objects/EON_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usage</relationshipLabel>
        <relationshipName>Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Callout_to_ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Callout to ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Usage</relationshipLabel>
        <relationshipName>Usage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EON_Meter_Point__c</fullName>
        <label>Meter Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EON_Meter_Read__c</fullName>
        <label>Meter Read (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EON_Meter_Reading_Date__c</fullName>
        <label>Meter Reading Date</label>
        <type>DateTime</type>
    </fields>
    <label>Usage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPU-{0000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>